<resources>
  <string name="app_name" translatable="false">Android Places Demo</string>
  <string name="error_alert_title" translatable="false">Uh-Oh!</string>
  <string name="error_alert_message_invalid_origin" translatable="false">Unable to parse Location Origin. Expected format: "33, 128"</string>
  <string name="error_alert_message_invalid_bounds" translatable="false">Unable to parse Location Bias or Location Restriction. Expected format: "33, 128"</string>
  <string name="error_alert_message_invalid_photo_size" translatable="false">Unable to parse Photo size. Expected format is integers</string>
  <string name="error_api_key" translatable="false">No API key defined in gradle.properties</string>
  <string name="display_raw_results" translatable="false">Display raw results?</string>
  <string name="autocomplete_button" translatable="false">Place Autocomplete</string>
  <string name="autocomplete_address_button" translatable="false">Place Autocomplete Address Form</string>
  <string name="programmatic_autocomplete_geocoding_button">Programmatic Autocomplete + Geocoding</string>
  <string name="place_and_photo_button" translatable="false">Place Details and Place Photos</string>
  <string name="current_place_button" translatable="false">Current Place</string>
  <string name="main_isOpenButtonText" translatable="false">Place is Open?</string>
  <string name="autocomplete_query_hint" translatable="false">(Initial) Query</string>
  <string name="autocomplete_hint_hint" translatable="false">Hint</string>
  <string name="autocomplete_country_hint" translatable="false">Countries (e.g CH, US, RO)</string>
  <string name="autocomplete_location_origin_label" translatable="false">Location Origin (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_bias_label" translatable="false">Location Bias (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_restriction_label" translatable="false">Location Restriction (format: -33.2, 128.2)</string>
  <string name="autocomplete_location_origin_hint" translatable="false">Origin (lat, lng)</string>
  <string name="autocomplete_location_south_west_hint" translatable="false">South West (lat, lng)</string>
  <string name="autocomplete_location_north_east_hint" translatable="false">North East (lat, lng)</string>
  <string name="autocomplete_use_types_filter" translatable="false">Use TypesFilter?</string>
  <string name="autocomplete_types_filter_hint" translatable="false">
    <font size="16">
      Comma separated list of up to 5 place types
    </font>
  </string>
  <string name="autocomplete_use_type_filter" translatable="false">Use TypeFilter? (Deprecated)</string>
  <string name="autocomplete_type_filter" translatable="false">Type Filter</string>
  <string name="autocomplete_use_session_token" translatable="false">(Predictions-only) Use session token?</string>
  <string name="autocomplete_activity_overlay_mode" translatable="false">Overlay mode?</string>
  <string name="autocomplete_support_fragment_text_label" translatable="false">Autocomplete Support Fragment:</string>
  <string name="autocomplete_fragment_text_label" translatable="false">Autocomplete Fragment:</string>
  <string name="autocomplete_support_fragment_update_button" translatable="false">Update Support Fragment</string>
  <string name="autocomplete_fragment_update_button" translatable="false">Update Fragment</string>
  <string name="autocomplete_activity_button" translatable="false">Open Activity</string>
  <string name="fetch_autocomplete_predictions_button" translatable="false">Fetch Predictions</string>
  <string name="autocomplete_address1_hint" translatable="false">Enter the address</string>
  <string name="autocomplete_address_heading_label" translatable="false">Delivery Address</string>
  <string name="autocomplete_address1_label" translatable="false">Address Line 1</string>
  <string name="autocomplete_address2_label" translatable="false">Apartment, unit, suite, or floor #</string>
  <string name="autocomplete_city_label" translatable="false">City</string>
  <string name="autocomplete_state_label" translatable="false">State/Province</string>
  <string name="autocomplete_postal_label" translatable="false">Postal code</string>
  <string name="autocomplete_country_label" translatable="false">Country/Region</string>
  <string name="autocomplete_proximity_check" translatable="false">Check device proximity</string>
  <string name="autocomplete_map_label" translatable="false">Map view of the selected address</string>
  <string name="autocomplete_save_button" translatable="false">Submit address</string>
  <string name="autocomplete_reset_button" translatable="false">Clear form</string>
  <string name="autocomplete_denied_message" translatable="false">User denied location permission. Cannot check proximity to entered address.</string>
  <string name="autocomplete_progress_message" translatable="false">Checking proximity</string>
  <string name="autocomplete_match_message" translatable="false">Device location matches entered address</string>
  <string name="autocomplete_nomatch_message" translatable="false">Device location does not match entered address</string>
  <string name="autocomplete_skipped_message" translatable="false">Address accepted without checking proximity</string>
  <string name="place_id_field_hint" translatable="false">Enter place ID</string>
  <string name="fetch_photo_checkbox" translatable="false">Also fetch photo?</string>
  <string name="photo_max_width_hint" translatable="false">Photo Max Width</string>
  <string name="photo_max_height_hint" translatable="false">Photo Max Height</string>
  <string name="use_custom_photo_reference" translatable="false">Use custom Photo Reference?</string>
  <string name="custom_photo_reference_hint" translatable="false">Custom Photo Reference</string>
  <string name="use_custom_fields" translatable="false">Manually set Place Fields?</string>
  <string name="fetch_place_and_photo_button" translatable="false">Fetch Place and Photo</string>
  <string name="isOpen_fetchPlaceButtonText" translatable="false">Fetch Place</string>
  <string name="isOpen_isOpenButtonText" translatable="false">Is Open</string>
  <string name="isOpen_placeIdHint" translatable="false">Enter place ID</string>
  <string name="isOpen_useCustomFieldsText" translatable="false">Manually set Place Fields?</string>
  <string name="isOpen_spinnerDescription" translatable="false">Time Zone</string>
  <string name="isOpen_dateHint" translatable="false">Select isOpen date</string>
  <string name="isOpen_timeHint" translatable="false">Select isOpen time</string>
  <string name="isOpen_useCustomTimeHint" translatable="false">Use custom isOpen time? (must set time zone, date, and time)</string>
  <string name="isOpen_defaultPlaceId" translatable="false">ChIJ0yqxBq23j4AR53Q9SzIY52A</string>
  <string name="isOpen_resultDescription" translatable="false">Is Place Open?</string>
  <string name="isOpen_displayRawResults" translatable="false">Display raw results?</string>
  <string name="find_current_place_button" translatable="false">Find Current Place</string>
  <string name="icon_view_content_description" translatable="false">Icon View</string>
  <string name="fetch_icon_checkbox" translatable="false">Also fetch icon?</string>
  <string name="fetch_icon_missing_fields_warning" translatable="false">\'Also fetch icon?\' is selected, but ICON_URL Place Field is not.</string>
  <string name="icon_view_image_content_description" translatable="false">Image view to display a Place Icon Image</string>
  <string name="icon_with_background" translatable="false">Icon with background:</string>
  <string name="place_photo" translatable="false">Place photo:</string>
  <string name="place_id_SFO" translatable="false">ChIJVVVVVYx3j4ARP-3NGldc8qQ</string>
  <string name="search">Search</string>
  <string name="search_a_place">Search a Place</string>
  <string name="programmatic_place_predictions_instructions">This activity demonstrates as-you-type programmatic place predictions. Tap on the search icon on the toolbar and search for a place.</string>
</resources>