<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2021 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_large"
    tools:context=".AutocompleteAddressActivity">

  <LinearLayout
      android:id="@+id/autocomplete_scroll_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_address1_label"/>

    <com.example.placesdemo.model.AutocompleteEditText
        android:id="@+id/autocomplete_address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/autocomplete_address1_label"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_address2_label"/>

    <EditText
        android:id="@+id/autocomplete_address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/autocomplete_address2_label"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_city_label"/>

    <EditText
        android:id="@+id/autocomplete_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/autocomplete_city_label"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/autocomplete_state_label"/>

      <EditText
          android:id="@+id/autocomplete_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints=""
          android:hint="@string/autocomplete_state_label"
          android:imeOptions="actionNext"
          android:inputType="textCapCharacters"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autocomplete_postal_label"/>

      <EditText
          android:id="@+id/autocomplete_postal"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:autofillHints=""
          android:hint="@string/autocomplete_postal_label"
          android:imeOptions="actionNext"
          android:inputType="number"/>
      </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_country_label"/>

    <EditText
        android:id="@+id/autocomplete_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/autocomplete_country_label"
        android:imeOptions="actionNext"
        android:inputType="text"/>

    <!-- Proximity check option provided for development testing convenience.
     User would typically not control this option. -->
    <CheckBox android:id="@+id/checkbox_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_proximity_check"/>

    <!-- The map for visual confirmation of the selected address -->
    <!-- Stub to only load the map after Autocomplete prediction selection -->
    <ViewStub
        android:id="@+id/stub_map"
        android:inflatedId="@+id/panel_map"
        android:layout="@layout/autocomplete_address_map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/autocomplete_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autocomplete_save_button"/>

    <!-- Reset button provided for development testing convenience. Not recommended for user-facing
    forms due to risk of mis-click when aiming for Submit button. -->
    <Button
        android:id="@+id/autocomplete_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/autocomplete_reset_button"/>
  </LinearLayout>
</ScrollView>

